@@ -1,7 +1,7 @@
 INCLUDES=-I../include ${POSTGRES_INCLUDE}
 MAINTAINERCLEANFILES=Makefile.in
 
-TESTS = test001 test002 test003 test004 test005 test006 test007 test008 test009 test010 test011 test012 test013 test014 test015 test016 test017 test018 test019 test020 test021 test022 test023 test024 test025 test026 test027 test028 test029 test030 test031 test032 test033 test034 test035 test036 test037 test038 test039 test040 test041 test042 test043 test044
+TESTS = test001 test002 test003 test004 test005 test006 test007 test008 test009 test010 test011 test012 test013 test014 test015 test016 test017 test018 test019 test020 test021 test022 test023 test024 test025 test026 test027 test028 test029 test030 test031 test032 test033 test034 test035 test036 test037 test038 test039 test040 test041 test042 test043 test044 test045
 check_PROGRAMS = ${TESTS}
 
 #TESTS_ENVIRONMENT=PGDATABASE=libpqxx
@@ -138,4 +138,7 @@ test043_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
 
 test044_SOURCES = test044.cxx
 test044_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
+
+test045_SOURCES = test045.cxx
+test045_LDADD = ../src/libpqxx.la ${POSTGRES_LIB}
 
